# Savr

./: .gitignore  Makefile  docker-compose.yml
client/savr-client/: Dockerfile  THEME_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/savr-client/.storybook/: main.ts  preview.tsx
client/savr-client/src/: App.tsx  index.tsx
client/savr-client/src/api/: auth.ts
client/savr-client/src/components/: DroppableRestuarant.tsx
client/savr-client/src/components/ChatBarInput/: ChairBarInput.css  Chat.tsx  ChatBarInput.tsx
client/savr-client/src/components/Checkout/: Checkout.tsx
client/savr-client/src/components/HomeLayout/: RestuarantList.tsx  SavrLandingPage.css  SavrLandingPage.tsx  TempHomeFile.tsx
client/savr-client/src/components/LoginFunctionality/: GoogleAuth.tsx  SignIn.tsx  (+1 more)
client/savr-client/src/hooks/: useAuth.ts
client/savr-client/src/lib-components/: Button.tsx  Card.tsx  Input.tsx  RecursivePartial.ts  ThemeToggle.tsx  index.ts  recursiveMerge.ts  theme.ts  themeDecorator.tsx
client/savr-client/src/pages/: Reports.tsx
client/savr-client/src/stories/: Button.stories.tsx  Card.stories.tsx  Input.stories.tsx  RecursivePartial.ts  SignIn.stories.tsx  SignUp.stories.tsx
client/savr-client/src/theme/: theme.ts  themeDecorator.tsx
client/savr-client/src/types/: api.ts
client/savr-client/storybook-static/: 242.ed0b3413.iframe.bundle.js  242.ed0b3413.iframe.bundle.js.map  247.2ea17ec4.iframe.bundle.js  247.2ea17ec4.iframe.bundle.js.map  357.ad6ce3bb.iframe.bundle.js  648.bc6c5ef8.iframe.bundle.js  735.1c7dbe44.iframe.bundle.js  760.a4de7486.iframe.bundle.js  760.a4de7486.iframe.bundle.js.map  788.686e212a.iframe.bundle.js  iframe.html  index.json  main.71667364.iframe.bundle.js  project.json  runtime~main.abee0121.iframe.bundle.js  stories-Button-stories.098c2181.iframe.bundle.js
savr-client/: package-lock.json
server/: .dockerignore  .gitignore  Dockerfile  app.py  login.py  main.py  models.py  pyproject.toml  registration.py  requirements.txt  security.py  user_models.py
server/AgentReserver/: Reserver.py
server/RestuarantScraping/: HtmlExtraction.py  MenuCards.py  MenuImage.py  RagEmbeddings.py  Scraper.py  restuarantEntry.py
server/agent_reserver/: reserver.py
server/restaurant_scraping/: html_extraction.py  menu_cards.py  menu_image.py  rag_embeddings.py  restaurant_entry.py  scraper.py
(+49 files in other folders)
