[project]
name = "savr-server"
version = "0.1.0"
description = "Savr backend server"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
    "flask-cors==4.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "psycopg2-binary==2.9.9",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "selenium==4.15.2",
    "webdriver-manager==4.0.1",
    "openai==1.3.7",
    "pinecone-client==2.2.4",
    "opencv-python==4.8.1.78",
    "Pillow==10.1.0",
    "dateparser==1.1.8",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "uuid==1.30",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]
